fix: logos/spacing

--- a/components/OnboardingWrapper/OnboardingSidebar/OnboardingSidebar.module.scss
+++ b/components/OnboardingWrapper/OnboardingSidebar/OnboardingSidebar.module.scss
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 20px 30px;
+    padding: 30px 20px;
     min-width: 250px;
 
     @include below(900px) {
